--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="form">
             <button class="exitBtn" onclick="exit()">X</button>
             <input type="text" class="webName" placeholder="Website Name">
-            <input type="text" class="webSite" placeholder="Web URL">
+            <input type="text" class="webSite" placeholder="Web URL" pattern="https?://.+" >
             <button class="submitBtn">SUBMIT</button>
         </div>
     </div>
