--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
     <div class="formBG">
         <form class="form">
             <button class="exitBtn" onclick="exit()">X</button>
-            <input type="text" class="webName" placeholder="Website Name">
-            <input type="url" class="webSite" placeholder="Web URL" pattern="https?://.+" >
+            <input type="text" class="webName" placeholder="Website Name" required>
+            <input type="url" class="webSite" placeholder="Web URL" pattern="https?://.+" required>
             <input type="submit" class="submitBtn" value="SUBMIT">
         </form>
     </div>
