--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <form class="form">
             <button class="exitBtn" onclick="exit()">X</button>
             <input type="text" class="webName" placeholder="Website Name" required>
-            <input type="url" class="webSite" placeholder="Web URL" pattern="https?://.+" required>
+            <input type="url" class="webSite" name="website" placeholder="Web URL" required pattern="https?://.+">
             <input type="submit" class="submitBtn" value="SUBMIT">
         </form>
     </div>
