--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
     <button onclick="addBookmark()" class="abbtn">+</button>
     <div class="formBG">
-        <form class="form">
+        <form class="form" on submit="setTimeout(1, add);">
             <button class="exitBtn" onclick="exit()">X</button>
             <input type="text" class="webName" placeholder="Website Name" required>
             <input type="url" class="webSite" name="website" placeholder="Web URL" required pattern="https?://.+">
@@ -274,7 +274,6 @@
                 bookmarks = [];
             setTimeout(1, add);
             refresh();
-            document.querySelector(".submitBtn").addEventListener("click", add);
         }
         function exit() {
             document.querySelector(".formBG").style.filter = "opacity(0)";
