--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
     </div>
     <button onclick="addBookmark()" class="abbtn">+</button>
     <div class="formBG">
-        <form class="form" on submit="setTimeout(1, add);">
+        <form class="form" onsubmit="setTimeout(1, add);">
             <button class="exitBtn" onclick="exit()">X</button>
             <input type="text" class="webName" placeholder="Website Name" required>
-            <input type="url" class="webSite" name="website" placeholder="Web URL" required pattern="https?://.+">
+            <input type="url" class="webSite" name="website" placeholder="Web URL" required pattern="https?://.+" />
             <input type="submit" class="submitBtn" value="SUBMIT">
         </form>
     </div>
