--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
     <button onclick="addBookmark()" class="abbtn">+</button>
     <div class="formBG">
-        <form class="form" onsubmit="setTimeout(1, add);">
+        <form class="form">
             <button class="exitBtn" onclick="exit()">X</button>
             <input type="text" class="webName" placeholder="Website Name" required>
             <input type="url" class="webSite" name="website" placeholder="Web URL" required pattern="https?://.+" />
